Adapting PNE and relevant resources to new schema